# scriptid

./: AUTHORS  CHANGELOG  DEPENDS  KNOWNBUGS  Makefile.in  README  configure  configure.in  scriptid-nnw.spec.sed.in  scriptid.spec.in  t.txt  version.h.in
autom4te.cache/: output.0  traces.0
data/: Makefile.in  vbscript.seperator  vbscript.words
identifier/: Makefile.in  parsefile.cpp  parsefile.h  parstest.cpp  reservedword.cpp  reservedword.h  scriptcmd.cpp  scriptid.cpp  scriptid.h  seperator.cpp  seperator.h  stats.cpp  stats.h
nn/: Makefile.in  learn.cpp  neuron.cpp  nnparam.h  nnwork.cpp  nnwork.h
